--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<logback.version>1.0.13</logback.version>
 	    <slf4j.version>1.7.5</slf4j.version>
 		<commons-io.version>2.4</commons-io.version>
+		<java-driver-version>1.0.4</java-driver-version>
     </properties>
 
 	<dependencies>
@@ -91,7 +92,7 @@
 		<dependency>
 			<groupId>com.datastax.cassandra</groupId>
 			<artifactId>cassandra-driver-core</artifactId>
-			<version>2.0.0-beta2</version>
+			<version>${java-driver-version}</version>
 		</dependency>		
 	</dependencies>
 </project>
